<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.kronos.kronos.AddGoalActivity">

    <EditText
        android:id="@+id/editText_metaDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_metaDescricao"/>

    <EditText
        android:id="@+id/editText_metaDuracaoHoras"
        android:layout_width="@dimen/editText_metaDuracaoHoras_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_metaDescricao"
        android:layout_toStartOf="@+id/editText_metaDuracaoMinutos"
        android:hint="@string/editText_metaDuracaoHoras"/>

    <EditText
        android:id="@id/editText_metaDuracaoMinutos"
        android:layout_width="@dimen/editText_metaDuracaoMinutos_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_metaDescricao"
        android:layout_alignParentEnd="true"
        android:hint="@string/editText_metaDuracaoMinutos"/>

    <EditText
        android:id="@+id/editText_metaCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_metaDuracaoHoras"
        android:hint="@string/editText_metaCategoria"/>

    <Spinner
        android:id="@+id/spinner_metaPrazo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/editText_metaPrazoCustom"
        android:layout_below="@id/editText_metaCategoria"/>

    <EditText
        android:id="@id/editText_metaPrazoCustom"
        android:layout_width="@dimen/editText_metaPrazoCustom_width"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_metaCategoria"
        android:hint="@string/editText_metaPrazoCustom"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_associarAtividade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_metaPrazo"
        android:text="@string/button_associarAtividade"/>

    <CheckBox
        android:id="@+id/chechBox_notificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_associarAtividade"
        android:text="@string/checkBox_notificar"/>

    <CheckBox
        android:id="@+id/chechBox_repetir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chechBox_notificar"
        android:text="@string/checkBox_repetir"/>

    <ImageButton
        android:id="@+id/imageButton_cancelar"
        android:layout_width="@dimen/imageButton_metaCancelar_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        style="?android:attr/borderlessButtonStyle"
        android:contentDescription="@string/editText_cancelar"
        android:src="@drawable/ic_action_remove"/>

    <ImageButton
        android:id="@+id/imageButton_adicionarMeta"
        android:layout_width="@dimen/imageButton_metaSalvar_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:contentDescription="@string/imageButton_addMeta"
        android:src="@drawable/ic_action_accept"/>

</RelativeLayout>
