<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:id="@+id/button_myDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_myDay"/>

    <Button
        android:id="@+id/button_history"
        android:layout_below="@id/button_myDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_history"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_goal"
        android:id="@+id/button_goal"
        android:layout_below="@+id/button_history"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_generateData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_generateData"/>

</RelativeLayout>
