<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView_associarAtividade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/textView_associarAtividade"
        android:textColor="@color/textView_associarAtividade"
        android:text="@string/textView_associarAtividade"/>

    <ListView
        android:id="@+id/listView_atividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_associarAtividade"/>

    <CheckBox
        android:id="@+id/checkBox_associarNovaAtividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_associarAtividades"/>

    <EditText
        android:id="@+id/editText_associarNovaAtividade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/checkBox_associarNovaAtividade"
        android:layout_below="@id/listView_atividades"
        android:textSize="@dimen/editText_associarNovaAtividade"
        android:hint="@string/editText_associarNovaAtividade"/>

    <Button
        android:id="@id/button_associarAtividades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editText_associarNovaAtividade"
        android:text="@string/button_associarAtividades"
        style="?android:borderlessButtonStyle"/>

</RelativeLayout>